<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/navybackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.franciscoandrade.bloxsee.views.teacher.AddStudentFragment">


    <TextView
        android:id="@+id/add_student_textview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/button"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/add_student_to_roster"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_container">


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_container">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/studentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:imeOptions="flagNoExtractUi"
                android:layout_marginRight="10dp"
                android:theme="@style/EditTextYellow">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/studentName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="flagNoExtractUi"
                    android:hint="@string/enter_student_name"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>



            <Spinner
                android:id="@+id/passwordSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="@color/main_green"
                android:layout_marginBottom="20dp"/>


            <Button
                android:id="@+id/addStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_student_button"
                android:theme="@style/RaisedButtonDark"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:text="@string/pick_student_password"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/passwordSpinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white" />


        <Button
            android:id="@+id/addStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:text="@string/add_student_button" />


        <TextView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textColor="@color/main_yellow"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="Close" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_alignBottom="@id/linear"
        android:src="@drawable/ic_back"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/main_green"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:borderWidth="0dp" />




</LinearLayout>
